// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TraceStepsTable.vue > Should render the table in dense mode 1`] = `
"<div class="v-table v-table--has-top v-table--has-bottom v-theme--light v-table--density-default v-data-table hide-table-count" item-key="id">
  <!---->
  <div class="v-table__wrapper">
    <table>
      <!---->
      <!---->
      <!---->
      <tbody class="v-data-table__tbody" role="rowgroup">
        <!---->
        <tr class="v-data-table__tr">
          <td class="v-data-table__td v-data-table-column--align-start">
            <hash-link-stub type="transaction" hash="0x123" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="true" unlink="false" loadcontract="false"></hash-link-stub>
          </td>
          <td class="v-data-table__td v-data-table-column--align-start"><span class="v-chip v-chip--label v-theme--light text-primary v-chip--density-default v-chip--size-small v-chip--variant-tonal" draggable="false"><!----><span class="v-chip__underlay"></span>
            <!---->
            <!---->
            <div class="v-chip__content" data-no-activator="">CALL</div>
            <!---->
            <!----></span>
          </td>
          <td class="v-data-table__td v-data-table-column--align-start"><span class="v-chip v-chip--label v-theme--light text-primary v-chip--density-default v-chip--size-small v-chip--variant-tonal" draggable="false" aria-describedby="v-tooltip-1"><!----><span class="v-chip__underlay"></span>
            <!---->
            <!---->
            <div class="v-chip__content" data-no-activator="">transfer</div>
            <!---->
            <!----></span>
            <!--teleport start-->
            <!--teleport end-->
          </td>
          <td class="v-data-table__td v-data-table-column--align-start">
            <div class="my-2 text-left">03/21 11:00:00 AM<br><small class="text-caption text-medium-emphasis">in 1 year</small></div>
          </td>
          <td class="v-data-table__td v-data-table-column--align-start">
            <div class="my-2 text-left"> From: <hash-link-stub type="address" hash="0xabc" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub><br></div>
          </td>
          <td class="v-data-table__td v-data-table-column--align-start">
            <!--v-if-->
            <hash-link-stub contract="[object Object]" type="address" hash="0xdef" fullhash="false" withname="true" notcopiable="false" withtokenname="true" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
          </td>
          <td class="v-data-table__td v-data-table-column--align-start">1 ETH</td>
        </tr>
        <!---->
        <!---->
      </tbody>
      <!---->
      <!---->
    </table>
  </div>
  <!---->
</div>"
`;

exports[`TraceStepsTable.vue > Should render the table with data 1`] = `
"<div class="v-table v-table--has-top v-table--has-bottom v-theme--light v-table--density-default v-data-table hide-table-count" item-key="id">
  <!---->
  <div class="v-table__wrapper">
    <table>
      <!---->
      <thead class="v-data-table__thead" role="rowgroup">
        <tr>
          <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
            <div class="v-data-table-header__content"><span>Transaction</span>
              <!---->
              <!---->
            </div>
          </th>
          <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
            <div class="v-data-table-header__content"><span>Type</span>
              <!---->
              <!---->
            </div>
          </th>
          <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
            <div class="v-data-table-header__content"><span>Method</span>
              <!---->
              <!---->
            </div>
          </th>
          <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sorted v-data-table__th" colspan="1" rowspan="1">
            <div class="v-data-table-header__content"><span>Mined On</span>
              <!---->
              <!---->
            </div>
          </th>
          <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
            <div class="v-data-table-header__content"><span>From</span>
              <!---->
              <!---->
            </div>
          </th>
          <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
            <div class="v-data-table-header__content"><span>To</span>
              <!---->
              <!---->
            </div>
          </th>
          <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
            <div class="v-data-table-header__content"><span>Value</span>
              <!---->
              <!---->
            </div>
          </th>
        </tr>
        <!---->
      </thead>
      <!---->
      <tbody class="v-data-table__tbody" role="rowgroup">
        <!---->
        <tr class="v-data-table__tr">
          <td class="v-data-table__td v-data-table-column--align-start">
            <hash-link-stub type="transaction" hash="0x123" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="true" unlink="false" loadcontract="false"></hash-link-stub>
          </td>
          <td class="v-data-table__td v-data-table-column--align-start"><span class="v-chip v-chip--label v-theme--light text-primary v-chip--density-default v-chip--size-small v-chip--variant-tonal" draggable="false"><!----><span class="v-chip__underlay"></span>
            <!---->
            <!---->
            <div class="v-chip__content" data-no-activator="">CALL</div>
            <!---->
            <!----></span>
          </td>
          <td class="v-data-table__td v-data-table-column--align-start"><span class="v-chip v-chip--label v-theme--light text-primary v-chip--density-default v-chip--size-small v-chip--variant-tonal" draggable="false" aria-describedby="v-tooltip-1"><!----><span class="v-chip__underlay"></span>
            <!---->
            <!---->
            <div class="v-chip__content" data-no-activator="">transfer</div>
            <!---->
            <!----></span>
            <!--teleport start-->
            <!--teleport end-->
          </td>
          <td class="v-data-table__td v-data-table-column--align-start">
            <div class="my-2 text-left">03/21 11:00:00 AM<br><small class="text-caption text-medium-emphasis">in 1 year</small></div>
          </td>
          <td class="v-data-table__td v-data-table-column--align-start">
            <!--v-if-->
            <hash-link-stub type="address" hash="0xabc" fullhash="false" withname="true" notcopiable="false" withtokenname="true" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
          </td>
          <td class="v-data-table__td v-data-table-column--align-start">
            <!--v-if-->
            <hash-link-stub contract="[object Object]" type="address" hash="0xdef" fullhash="false" withname="true" notcopiable="false" withtokenname="true" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
          </td>
          <td class="v-data-table__td v-data-table-column--align-start">1 ETH</td>
        </tr>
        <!---->
        <!---->
      </tbody>
      <!---->
      <!---->
    </table>
  </div>
  <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
  <div class="v-data-table-footer">
    <!---->
    <div class="v-data-table-footer__items-per-page"><span>Rows per page:</span>
      <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--no-label v-field--variant-outlined v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-controls="v-menu-5">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!---->
              <!---->
              <!---->
              <div class="v-field__input" data-no-activator="">
                <!---->
                <!---->
                <div class="v-select__selection"><span class="v-select__selection-text">10<!----></span></div><input size="1" type="text" id="input-3" aria-describedby="input-3-messages" inputmode="none" aria-label="Open" title="Open" value="10">
              </div>
              <!---->
            </div>
            <!---->
            <div class="v-field__append-inner">
              <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
              <!---->
            </div>
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <!---->
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <div class="v-data-table-footer__info">
      <div>1-1 of 1</div>
    </div>
    <div class="v-data-table-footer__pagination">
      <nav class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation" data-test="v-pagination-root">
        <ul class="v-pagination__list">
          <li class="v-pagination__first" data-test="v-pagination-first"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="First page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator=""><!----></span>
              <!---->
              <!---->
            </button></li>
          <li class="v-pagination__prev" data-test="v-pagination-prev"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Previous page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
              <!---->
              <!---->
            </button></li>
          <li class="v-pagination__next" data-test="v-pagination-next"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Next page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
              <!---->
              <!---->
            </button></li>
          <li class="v-pagination__last" data-test="v-pagination-last"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Last page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator=""><!----></span>
              <!---->
              <!---->
            </button></li>
        </ul>
      </nav>
    </div>
  </div>
</div>"
`;

exports[`TraceStepsTable.vue > Should render the table with highlighted address 1`] = `
"<div class="v-table v-table--has-top v-table--has-bottom v-theme--light v-table--density-default v-data-table hide-table-count" item-key="id">
  <!---->
  <div class="v-table__wrapper">
    <table>
      <!---->
      <thead class="v-data-table__thead" role="rowgroup">
        <tr>
          <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
            <div class="v-data-table-header__content"><span>Transaction</span>
              <!---->
              <!---->
            </div>
          </th>
          <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
            <div class="v-data-table-header__content"><span>Type</span>
              <!---->
              <!---->
            </div>
          </th>
          <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
            <div class="v-data-table-header__content"><span>Method</span>
              <!---->
              <!---->
            </div>
          </th>
          <th class="v-data-table__td v-data-table-column--align-start v-data-table__th--sorted v-data-table__th" colspan="1" rowspan="1">
            <div class="v-data-table-header__content"><span>Mined On</span>
              <!---->
              <!---->
            </div>
          </th>
          <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
            <div class="v-data-table-header__content"><span>From</span>
              <!---->
              <!---->
            </div>
          </th>
          <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
            <div class="v-data-table-header__content"><span>To</span>
              <!---->
              <!---->
            </div>
          </th>
          <th class="v-data-table__td v-data-table-column--align-start v-data-table__th" colspan="1" rowspan="1">
            <div class="v-data-table-header__content"><span>Value</span>
              <!---->
              <!---->
            </div>
          </th>
        </tr>
        <!---->
      </thead>
      <!---->
      <tbody class="v-data-table__tbody" role="rowgroup">
        <!---->
        <tr class="v-data-table__tr">
          <td class="v-data-table__td v-data-table-column--align-start">
            <hash-link-stub type="transaction" hash="0x123" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="true" unlink="false" loadcontract="false"></hash-link-stub>
          </td>
          <td class="v-data-table__td v-data-table-column--align-start"><span class="v-chip v-chip--label v-theme--light text-primary v-chip--density-default v-chip--size-small v-chip--variant-tonal" draggable="false"><!----><span class="v-chip__underlay"></span>
            <!---->
            <!---->
            <div class="v-chip__content" data-no-activator="">CALL</div>
            <!---->
            <!----></span>
          </td>
          <td class="v-data-table__td v-data-table-column--align-start"><span class="v-chip v-chip--label v-theme--light text-primary v-chip--density-default v-chip--size-small v-chip--variant-tonal" draggable="false" aria-describedby="v-tooltip-1"><!----><span class="v-chip__underlay"></span>
            <!---->
            <!---->
            <div class="v-chip__content" data-no-activator="">transfer</div>
            <!---->
            <!----></span>
            <!--teleport start-->
            <!--teleport end-->
          </td>
          <td class="v-data-table__td v-data-table-column--align-start">
            <div class="my-2 text-left">03/21 11:00:00 AM<br><small class="text-caption text-medium-emphasis">in 1 year</small></div>
          </td>
          <td class="v-data-table__td v-data-table-column--align-start"><span class="v-chip v-theme--light v-chip--density-default v-chip--size-x-small v-chip--variant-tonal mr-2" draggable="false"><!----><span class="v-chip__underlay"></span>
            <!---->
            <!---->
            <div class="v-chip__content" data-no-activator="">self</div>
            <!---->
            <!----></span>
            <hash-link-stub type="address" hash="0xabc" fullhash="false" withname="true" notcopiable="false" withtokenname="true" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
          </td>
          <td class="v-data-table__td v-data-table-column--align-start">
            <!--v-if-->
            <hash-link-stub contract="[object Object]" type="address" hash="0xdef" fullhash="false" withname="true" notcopiable="false" withtokenname="true" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
          </td>
          <td class="v-data-table__td v-data-table-column--align-start">1 ETH</td>
        </tr>
        <!---->
        <!---->
      </tbody>
      <!---->
      <!---->
    </table>
  </div>
  <hr class="v-divider v-theme--light" aria-orientation="horizontal" role="separator">
  <div class="v-data-table-footer">
    <!---->
    <div class="v-data-table-footer__items-per-page"><span>Rows per page:</span>
      <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field v-select v-select--single v-select--selected">
        <!---->
        <div class="v-input__control">
          <div class="v-field v-field--active v-field--appended v-field--center-affix v-field--dirty v-field--no-label v-field--variant-outlined v-theme--light v-locale--is-ltr" role="combobox" aria-haspopup="listbox" aria-expanded="false" aria-controls="v-menu-6">
            <div class="v-field__overlay"></div>
            <div class="v-field__loader">
              <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                <!---->
                <div class="v-progress-linear__background"></div>
                <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                  <div class="v-progress-linear__indeterminate">
                    <div class="v-progress-linear__indeterminate long"></div>
                    <div class="v-progress-linear__indeterminate short"></div>
                  </div>
                </transition-stub>
                <!---->
              </div>
            </div>
            <!---->
            <div class="v-field__field" data-no-activator="">
              <!---->
              <!---->
              <!---->
              <div class="v-field__input" data-no-activator="">
                <!---->
                <!---->
                <div class="v-select__selection"><span class="v-select__selection-text">10<!----></span></div><input size="1" type="text" id="input-4" aria-describedby="input-4-messages" inputmode="none" aria-label="Open" title="Open" value="10">
              </div>
              <!---->
            </div>
            <!---->
            <div class="v-field__append-inner">
              <!----><i class="mdi-menu-down mdi v-icon notranslate v-theme--light v-icon--size-default v-select__menu-icon" aria-hidden="true"></i>
              <!---->
            </div>
            <div class="v-field__outline">
              <div class="v-field__outline__start"></div>
              <!---->
              <div class="v-field__outline__end"></div>
              <!---->
            </div>
          </div>
        </div>
        <!---->
        <!---->
      </div>
    </div>
    <div class="v-data-table-footer__info">
      <div>1-1 of 1</div>
    </div>
    <div class="v-data-table-footer__pagination">
      <nav class="v-pagination v-theme--light" role="navigation" aria-label="Pagination Navigation" data-test="v-pagination-root">
        <ul class="v-pagination__list">
          <li class="v-pagination__first" data-test="v-pagination-first"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="First page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator=""><!----></span>
              <!---->
              <!---->
            </button></li>
          <li class="v-pagination__prev" data-test="v-pagination-prev"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Previous page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-left mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
              <!---->
              <!---->
            </button></li>
          <li class="v-pagination__next" data-test="v-pagination-next"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Next page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator=""><i class="mdi-chevron-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span>
              <!---->
              <!---->
            </button></li>
          <li class="v-pagination__last" data-test="v-pagination-last"><button type="button" class="v-btn v-btn--disabled v-btn--icon v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-plain" disabled="" aria-label="Last page" aria-disabled="true"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
              <!----><span class="v-btn__content" data-no-activator=""><!----></span>
              <!---->
              <!---->
            </button></li>
        </ul>
      </nav>
    </div>
  </div>
</div>"
`;
